[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/ARCADE_N.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/GameOverUI.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/Buttons/Botton_Start2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Buttons/Botton_Start1.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 5
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.352941, 0.352941, 0.352941 )

[node name="RestartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -50.0
margin_right = 274.0
margin_bottom = 60.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="HomeButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -305.0
margin_top = -50.0
margin_right = -95.0
margin_bottom = 60.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="WinnerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -280.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 210.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PLAYER 1
WINS"
align = 1
valign = 1
autowrap = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
